# UAP-Miftahul

./: README.md  pyproject.toml
src/: app.py  klasifikasi_citra.py
src/Model/Image/: UAP_PEMBELAJARAN_MESIN.ipynb
